# etis-service

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  test1.py
src/: main.py  settings.py
src/core/database/mongodb/: __init__.py
src/core/etis_http/: client.py
src/core/repository/: __init__.py  base_repository.py  mongodb_repository.py
src/core/utils/: date.py
src/features/: __init__.py
src/features/audience/: dependencies.py  repository.py  router.py  schemas.py  service.py
src/features/audience_timetable/: audience_usage_info_repository.py  audience_usage_repository.py  dependencies.py  parser.py  router.py  schemas.py  service.py
src/features/common/: enums.py
src/features/departments/: dependencies.py  repository.py  router.py  schemas.py  service.py
src/features/faculties/: dependencies.py  repository.py  router.py  schemas.py  service.py
src/features/groups/: dependencies.py  repository.py  router.py  schemas.py  service.py
src/features/period_week/: dependencies.py  repository.py  router.py  schemas.py  service.py
src/features/teachers/: dependencies.py  repository.py  router.py  schemas.py  service.py
