[tool.poetry]
name = "teachers-service"
version = "0.1.0"
description = ""
authors = ["Damego <damego.dev@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
motor = "^3.6.0"
pymongo = "^4.8.0"
pydantic-settings = "^2.6.0"
gunicorn = "^23.0.0"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"

[tool.poetry.group.dev.dependencies]
black = "^22.3.0"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
skip = ["__init__.py"]

[tool.ruff]
line-length = 120
target-version = "py312"
output-format = "concise" # set to full if you want to see the source of the error/warning

[tool.ruff.lint]
ignore-init-module-imports = true
task-tags = ["TODO", "FIXME", "XXX", "HACK", "REVIEW", "NOTE"]
select = ["E", "F", "B", "Q", "RUF", "D", "ANN", "RET", "C"]
ignore = [
    "Q0",
    "E501",
    # These default to arguing with Black.  We might configure some of them eventually
    "ANN1",
    # These insist that we have Type Annotations for self and cls.
    "D105",
    "D107",
    # Missing Docstrings in magic method and __init__
    "D401",
    # First line should be in imperative mood; try rephrasing
    "D400",
    "D415",
    # First line should end with a period
    "D106",
    # Missing docstring in public nested class.  This doesn't work well with Metadata classes.
    "D417",
    # Missing argument in the docstring
    "D406",
    # Section name should end with a newline
    "D407",
    # Missing dashed underline after section
    "D212",
    # Multi-line docstring summary should start at the first line
    "D404",
    # First word of the docstring should not be This
    "D203",
    # 1 blank line required before class docstring

    # Everything below this line is something we care about, but don't currently meet
    "ANN001",
    # Missing type annotation for function argument 'token'
    "ANN002",
    # Missing type annotation for *args
    "ANN003",
    # Missing type annotation for **kwargs
    "ANN401",
    # Dynamically typed expressions (typing.Any) are disallowed
    #    "B009",
    # Do not call getattr with a constant attribute value, it is not any safer than normal property access.
    "B010",
    # Do not call setattr with a constant attribute value, it is not any safer than normal property access.
    "D100",
    # Missing docstring in public module
    "D101",
    # ... class
    "D102",
    # ... method
    "D103",
    # ... function
    "D104",
    # ... package

    # Plugins we don't currently include: flake8-return
    "RET503",
    # missing explicit return at the  end of function ableto return non-None value.
    "RET504",
    # unecessary variable assignement before return statement.
]

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = true
suppress-dummy-args = true
suppress-none-returning = true

[tool.ruff.lint.flake8-errmsg]
max-string-length = 20

[tool.ruff.lint.mccabe]
max-complexity = 13